# pymason

./: LICENSE  README.md  pyproject.toml
pymason/: config.py  installer.py  main.py  packages.py  projects.py
pymason/util/: file_manager.py  project_manager.py
